--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="row">
       <div class="twelve column" style="margin-top: 5%">
-        
+
         <h3 id="article_name">Welcome!</h3>
         <p id="question_body">This is WikiQuiz. Enter the name of a wikipedia article at the top of this page, and we'll generate some fill-in-the-blank questions to test your knowledge of the dates/things/people/places it mentions. If the question doesn't seem like it was generated correctly, just click next question!</p>
       </div>
@@ -63,5 +63,5 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </html>
